Fix alignment of card save status

--- a/scss/components-edit-screen.scss
+++ b/scss/components-edit-screen.scss
@@ -14,7 +14,11 @@
   }
 
   > .savestate {
-    margin: 0.2rem 2rem;
+    box-sizing: border-box;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0.2rem 2rem;
     opacity: 0.5;
   }
 
